--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,15 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".DetailTvShowActivity">
+        </activity>
+        <activity
+                android:name=".MainActivity"
+                android:label="@string/title_activity_menu">
+        </activity>
         <activity android:name=".DetailActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
