--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.moviecatalogue">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -9,13 +11,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".DetailTvShowActivity">
+        <activity
+                android:name=".detailtvshow.DetailTvShowActivity"
+                android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".MainActivity"
                 android:label="@string/title_activity_menu">
         </activity>
-        <activity android:name=".DetailActivity">
+        <activity
+                android:name=".detailmovie.DetailActivity"
+                android:screenOrientation="portrait">
         </activity>
         <activity android:name=".MenuActivity">
             <intent-filter>
