--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.moviecatalogue">
+        package="com.example.moviecatalogue">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
             android:allowBackup="true"
@@ -11,25 +11,33 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
+        <activity android:name=".reminders.RemindersActivity" />
         <activity
                 android:name=".detailtvshow.DetailTvShowActivity"
-                android:screenOrientation="portrait">
-        </activity>
+                android:screenOrientation="portrait" />
         <activity
                 android:name=".MainActivity"
-                android:label="@string/title_activity_menu">
-        </activity>
+                android:label="@string/title_activity_menu" />
         <activity
                 android:name=".detailmovie.DetailActivity"
-                android:screenOrientation="portrait">
-        </activity>
+                android:screenOrientation="portrait" />
         <activity android:name=".MenuActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver
+                android:name=".reminders.DailyAlarmReceiver"
+                android:enabled="true"
+                android:exported="true" />
+        <receiver
+                android:name=".reminders.ReleasedAlarmReceiver"
+                android:enabled="true"
+                android:exported="true" />
     </application>
 
 </manifest>
