--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
         package="com.example.moviecatalogue">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <permission
+            android:name="com.example.moviecatalogue.READ_DATABASE"
+            android:protectionLevel="normal"/>
+    <permission
+            android:name="com.example.moviecatalogue.WRITE_DATABASE"
+            android:protectionLevel="normal"/>
 
     <application
             android:allowBackup="true"
@@ -11,6 +17,19 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <receiver android:name=".stackwidget.StackWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/stack_widget_info" />
+        </receiver>
+
+        <service
+                android:name=".stackwidget.StackWidgetService"
+                android:permission="android.permission.BIND_REMOTEVIEWS"/>
 
         <activity android:name=".reminders.RemindersActivity" />
         <activity
@@ -38,6 +57,12 @@
                 android:name=".reminders.ReleasedAlarmReceiver"
                 android:enabled="true"
                 android:exported="true" />
+        <provider
+                android:authorities="com.example.moviecatalogue"
+                android:name=".favorites.provider.MovieProvider"
+                android:exported="true"
+                android:readPermission="com.example.moviecatalogue.READ_DATABASE"
+                android:writePermission="com.example.moviecatalogue.WRITE_DATABASE"/>
     </application>
 
 </manifest>
